--- a/smartpos-view/src/app/layout/header/header.component.html
+++ b/smartpos-view/src/app/layout/header/header.component.html
@@ -5,17 +5,16 @@
     <i class="fa fa-angle-up mobile"></i>
   </a>
 
-  <span class="topbar-title textwhite">Aplicación para punto de venta</span>
+  <span class="topbar-title textwhite">Aplicaci&oacute;n para punto de venta</span>
 
-  <a id="topbar-profile-menu-button" (click)="userMenuActive = !userMenuActive" *ngIf="checkAccess()">
+  <a id="topbar-profile-menu-button" (click)="fullLogout()" *ngIf="checkAccess()">
     <div id="topbar-name-container">
-      <span id="topbar-name">{{ user?.fullName }}</span>
-      <span id="topbar-last-access">Ingreso: {{ user?.lastAccess }}</span>
+      <span id="topbar-name">Salir</span>
+      <i class="fa fa-sort-down"></i>
     </div>
-    <img alt="ecuador-layout" class="topbar-profile" src="assets/images/user.jpg" style="display:none;" />
-    <i class="fa fa-sort-down"></i>
   </a>
 
+  <!-- 
   <ul class="fadeInDown" [ngClass]="{ 'usermenu-active': userMenuActive }" id="topbar-usermenu">
     <li class="topbar-name-mobile">
       <span>{{ user?.fullName }}</span>
@@ -33,6 +32,7 @@
       </a>
     </li>
   </ul>
+  -->
 </div>
  
  
